--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <p>This tirquoise bay boasts some of the clearest, cleanest water you’ll ever see. The calm sea is great for snorkeling and very safe for swimming, making it a very family-friendly location.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="imgs/nothing_else.jpg" alt="Nothing but sea" width="140" height="140">
+          <img class="img-circle" src="imgs/nothing.jpg" alt="Nothing but sea" width="140" height="140">
           <h2>And nothing else</h2>
           <p>Basina bay is pretty little rustic cove on the island’s north coast that’s small in size yet packed with character. It’s surrounded by plenty of shady trees and rocky headland with just one small restaurant. </p>
         </div><!-- /.col-lg-4 -->
